# JamomaCore

DSP/extensions/AudioEngine/: CMakeLists.txt
DSP/extensions/FilterLib/: FilterLib.cpp
DSP/extensions/SoundfileLib/: CMakeLists.txt
DSP/extensions/SoundfileLib/includes/: TTSoundfileLoader.h
DSP/extensions/SoundfileLib/sources/: TTSoundfileLoader.cpp
Foundation/extensions/DataspaceLib/source/: TTDataspaceConverter.cpp  TTDataspaceUnit.cpp
Foundation/extensions/NetworkLib/source/: TTOscSocket.cpp  TTWebSend.cpp  TTWebSocket.cpp
Graph/extensions/MidiLib/: CMakeLists.txt
Modular/extensions/MIDI/: CMakeLists.txt
Modular/extensions/MIDI/source/: MIDI.cpp
Modular/extensions/WebSocket/: CMakeLists.txt
Score/: CMakeLists.txt
Score/extensions/: CMakeLists.txt
Score/extensions/Automation/: CMakeLists.txt
Score/extensions/Interval/: CMakeLists.txt
Score/extensions/Loop/: CMakeLists.txt
Score/extensions/Scenario/: CMakeLists.txt
Shared/: jamomalib.rb
Shared/CMake/: JamomaPlatformSpecific.cmake  JamomaUtilFunctions.cmake
Shared/CMake/modules/: FindLibXml2.cmake  FindSndfile.cmake
extensions/FilterLib/: FilterLib.yml
extensions/FilterLib/includes/: TTComb.h
extensions/FilterLib/source/: TTComb.cpp
extensions/FilterLib/tests/: TTComb.test.cpp
