cmake_minimum_required(VERSION 3.0)
project(Score)
set(JAMOMA_CURRENT_LIBRARY_NAME "Score")

add_library(TimePluginLib OBJECT "${CMAKE_CURRENT_SOURCE_DIR}/extensions/TimePluginLib.cpp")
target_include_directories(TimePluginLib PUBLIC "${PROJECT_SOURCE_DIR}/extensions")
target_include_directories(TimePluginLib PUBLIC "${PROJECT_SOURCE_DIR}/library/includes")
target_include_directories(TimePluginLib PUBLIC $<TARGET_PROPERTY:Foundation,INTERFACE_INCLUDE_DIRECTORIES>)
target_include_directories(TimePluginLib PUBLIC $<TARGET_PROPERTY:Modular,INTERFACE_INCLUDE_DIRECTORIES>)
target_include_directories(TimePluginLib PUBLIC $<TARGET_PROPERTY:ProtocolLib,INTERFACE_INCLUDE_DIRECTORIES>)
target_include_directories(TimePluginLib PUBLIC $<TARGET_PROPERTY:SchedulerLib,INTERFACE_INCLUDE_DIRECTORIES>)
target_include_directories(TimePluginLib PUBLIC $<TARGET_PROPERTY:PeerObject,INTERFACE_INCLUDE_DIRECTORIES>)

add_subdirectory(library)
add_subdirectory(extensions)
